--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "./node_modules/typeorm/cli-ts-node-esm.js --d src/config/typeorm.config.ts",
+    "migration:create": "npm run build && npm run typeorm migration:create --",
+    "migration:generate": "npm run build && npm run typeorm migration:generate --",
+    "migration:run": "npm run build && npm run typeorm migration:run --",
+    "migration:run:prod": "npm run typeorm migration:run --",
+    "migration:revert": "npm run build && npm run typeorm migration:revert --"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
