--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.6",
+    "webpack": "^5.73.0",
     "winston": "^3.7.2"
   },
   "devDependencies": {
