--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "chek-bank-service",
   "version": "0.0.1",
   "description": "",
+  "engines": {
+    "node": "16.x"
+  },
   "author": "",
   "private": true,
   "license": "UNLICENSED",
@@ -29,6 +32,7 @@
     "gcp-build": "npm run build"
   },
   "dependencies": {
+    "@nestjs/cli": "^8.0.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
@@ -45,7 +49,6 @@
     "winston": "^3.7.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
