--- a/app.yaml
+++ b/app.yaml
@@ -1,3 +1,5 @@
 runtime: nodejs
 service: chek-bank-service
 env: flex
+beta_settings:
+  cloud_sql_instances: chek-app-352602:us-central1:chek-bank-service
