--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
         env:
           DATABASE_HOST: '${{ secrets.DATABASE_HOST }}'
           DATABASE_PASSWORD: '${{ secrets.DATABASE_PASSWORD}}'
-        run: echo "$DATABASE_HOST" > .env-for-app-yaml
+        run: echo "$env" > .env-for-app-yaml
 
       - id: print-env
         run: echo "$(<.env-for-app-yaml)"
