--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,13 +50,16 @@ jobs:
         env:
           DATABASE_HOST: '${{ secrets.DATABASE_HOST }}'
           DATABASE_PASSWORD: '${{ secrets.DATABASE_PASSWORD}}'
-        run: echo "$env" > .env-for-app-yaml
+        run: echo "$MY_DOTENV" > .env-for-app-yaml
 
       - id: print-env
         run: echo "$(<.env-for-app-yaml)"
 
       - id: prepare-app-yaml
         uses: mshick/fast-envsubst@v1
+        env:
+          DATABASE_HOST: '${{ secrets.DATABASE_HOST }}'
+          DATABASE_PASSWORD: '${{ secrets.DATABASE_PASSWORD}}'
         with:
           env-file: .env-for-app-yaml
           in-file: app.yaml.template
